--- a/style.css
+++ b/style.css
@@ -140,7 +140,10 @@ button:hover {
 
 .gallery a img {
   height: 98%;
-  width: 20rem;
+}
+
+.gallery a {
+  width: 18rem;
 }
 
 .gallery-wrapper::-webkit-scrollbar {
